fix checkbox blue border - still need to fix checkbox, agreement hover state, agreement spacing, and scroll

--- a/src/layouts/index.module.less
+++ b/src/layouts/index.module.less
@@ -180,8 +180,9 @@ input {
 }
 
 // adds cyan border when unchecked
-.ant-checkbox-inner, .ant-checkbox-wrapper:hover .ant-checkbox-inner, .ant-checkbox-input:focus + .ant-checkbox-inner {
+:global(.ant-checkbox .ant-checkbox-inner), :global(.ant-checkbox:not(.ant-checkbox-disabled):hover .ant-checkbox-inner), :global(.ant-checkbox-wrapper:not(.ant-checkbox-wrapper-disabled):hover .ant-checkbox-inner) {
   border-color: #52e5ff;
+  background: transparent;
 }
 
 // removes blue border after checking
